[package]
name = "toggl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
crossterm = "0.27.0"
ratatui = "0.26.2"
tui-input = "0.8.0"
thiserror = "1.0.58"
anyhow = "1.0.82"
directories = "5.0.1"
keyring = "2.3.2"
toml = "0.8.12"
chrono = { version = "0.4.38", features = ["serde"] }
